Bug 143487 - UI: Comment note box has a visual inner border box
Summary: UI: Comment note box has a visual inner border box
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.2.0.1 rc
Hardware: All Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.0 target:7.2.3
Keywords: bibisected, bisected, regression
: 142510 (view as bug list)
Depends on:
Blocks: Writer-Comments Weld-Writer-Comments
  Show dependency treegraph
 
Reported: 2021-07-21 18:19 UTC by Telesto
Modified: 2021-11-02 01:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screencast (332.49 KB, video/mp4)
2021-07-21 18:20 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-07-21 18:19:45 UTC
Description:
Comment note has a visual inner border box 

Steps to Reproduce:
1. open Writer
2. Insert a comment
3. Notice a grayish border inside

4. Type something inside the comment
5. Click outside to comment
6. Click inside -> observe the dominant highlighting below (grayish)

Actual Results:
Inner box

Expected Results:
Not sure if this is an explicit design change or a result of welding. I guess the latter.. 


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 3d18cae102e16b85fb8787f5ec3b086bfa2bd7b8
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

Still ok in
Version: 7.1.0.0.beta1+ (x64)
Build ID: f9fab4203c1aa0b9a3f27ce2713b6d5addc7df19
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: nl-NL
Calc: CL
Comment 1 Telesto 2021-07-21 18:20:39 UTC
Created attachment 173761 [details]
Screencast
Comment 2 BogdanB 2021-07-22 21:27:43 UTC
Seems ok in
Version: 7.2.0.1.0+ / LibreOffice Community
Build ID: 5570795d54a00041a406243b777f0df5f6399b67
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-2, Time: 2021-07-15_19:14:35
Calc: threaded

Also ok in
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: c6695a4aabeaae99174b7658f2b813788ecff7f0
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Maybe is just Windows?
Comment 3 Полякова Анна 2021-07-23 10:42:33 UTC
no repro in 

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 0d4cbdbc9cd4ab06056cec66cffd292b41615b6e
CPU threads: 4; OS: Mac OS X 10.14.6; UI render: default; VCL: osx
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: threaded

does not violate the UI
Comment 4 Telesto 2021-07-23 18:07:31 UTC
(In reply to BogdanB from comment #2)
> Maybe is just Windows?

Appears to be the case..
Comment 5 BogdanB 2021-07-27 12:18:42 UTC
Confirm this bug with
Version: 7.2.0.1.0+ (x64) / LibreOffice Community
Build ID: 2a265bdda19d86437c6eb4d8deb0057d5b45e97f
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: threaded
Comment 7 Commit Notification 2021-09-15 12:53:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dedb3337291c09c85262ca08bacd01e8e5901d22

Resolves: tdf#143487 don't draw a border at all for DrawFrameStyle::NONE

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2021-09-15 12:59:08 UTC
done in trunk, I'll leave it a few days before considering a backport to flush out any side effects
Comment 9 Roman Kuznetsov 2021-09-17 19:42:21 UTC
verified in

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: a9cc066a86c6bd3423c5802c5a4eded55a50c754
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded

Thank you Caolán!
Comment 10 Commit Notification 2021-09-30 09:07:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/bd4f890462701f9ab39f78429704d13c971fc776

Resolves: tdf#143487 don't draw a border at all for DrawFrameStyle::NONE

It will be available in 7.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Buovjaga 2021-10-13 10:09:09 UTC
*** Bug 142510 has been marked as a duplicate of this bug. ***