Resolves: tdf#143487 don't draw a border at all for DrawFrameStyle::NONE

Change-Id: I7794376c9475a32276d23135365c99a3f6fb7d84